@startuml
skinparam classAttributeIconSize 0

class RegisterGreenSpaceController {
     + RegisterGreenSpaceController(GreenSpaceRepository)
        + GreenSpace(name, type, area, adress,email)

}


class RegisterGreenSpaceUI {
}
class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}
class UserSession
{
    + getUserEmail()
}

class GreenSpace
{
    - String name
    - String Type
    - int area
    - int adress
    - Email email
    + GreenSpace(name, type, area, adress,email)
}
class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getGreenSpaceRepository()
}

class GreenSpaceRepository {
   + getGreenSpacebyName(name)
}

class GreenSpaceMapper {
    + List<GreenSpaceDTO> toDTO(List<GreenSpace> greenSpaces)
    + GreenSpaceDTO toDTO(GreenSpace greenSpace)
}
class GreenSpaceDTO{
    - String name
    - String Type
    - int area
    - int adress
    - Email email
    + GreenSpaceDTO(name, type, area, adress, email)
}

RegisterGreenSpaceUI ..> RegisterGreenSpaceController
RegisterGreenSpaceController ..> GreenSpaceRepository : greenSpaceRepository
GreenSpaceRepository ---> GreenSpace : greenSpace
Repositories ..> GreenSpaceRepository : greenSpaceRepository
RegisterGreenSpaceController ..> Repositories : repositories
GreenSpaceMapper ..> GreenSpace
GreenSpaceMapper ..> GreenSpaceDTO
GreenSpaceRepository ..> GreenSpaceMapper : greenSpaceMapper
RegisterGreenSpaceController ..> ApplicationSession
ApplicationSession ..> UserSession : userSession
ApplicationSession ..> ApplicationSession :getInstance
@enduml